# lean_tui

./: Cargo.toml
src/: lib.rs  model.rs
src/terminal/: mod.rs  terminal_handler.rs
